--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -2392,64 +2392,41 @@
                                 <div class="tab-pane active" id="tab_1_7" ng-show="selectedTab == 7" style="display: none;">
 
                                     <div class="row cards-container iodrive">
-
-                                        <div class="btn-group relbutton">
-
-                                            <div class="btn-group">
-                                                <a class="btn red" href="#" data-toggle="dropdown">
-                                                    {{_('Attach')}}
-                                                    <i class="icon-angle-down"></i>
-                                                </a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a ng-click="showCreateDocument('document')" href="#" data-toggle="modal">
-                                                            <img src="/static/img/google_drive/text/plain.png" class=" ">
-                                                            {{_('Document')}}
-                                                        </a>
-                                                    </li>
-                                                    <li><a ng-click="showCreateDocument('presentation')" href="#" data-toggle="modal">
-                                                            <img src="/static/img/google_drive/presentation.png" class="">
-                                                            {{_('Presentation')}}
-                                                        </a>
-                                                    </li>
-                                                    <li><a ng-click="showCreateDocument('spreadsheet')" href="#" data-toggle="modal">
-                                                            <img src="/static/img/google_drive/spreadsheet.png" class="">
-                                                            {{_('Spreadsheet')}}
-                                                        </a>
-                                                    </li>
-
-                                                </ul>
-                                            </div>
-                                            <div class="btn-group">
-                                                <button ng-click="createPickerUploader()" id="sample_editable_1_new" class="btn red">
-                                                    <i class="fa fa-upload"></i>
-                                                </button>
-
-                                            </div>
-                                        </div>
                                         <div class="col-md-12">
                                             <div class="row">
                                                 <!-- ngRepeat: attachment in documents -->
                                                 <div class="col-md-12 waterfall2" ng-hide="blankStatdocuments">
-                                                    <div ng-repeat="attachment in documents"  class="cardElement"  >
-                                                        <div class="detailsSection">
-                                                            <div class="head">
-                                                                <div class="pic">
-                                                                    <a href="/#/documents/show/<%= attachment.id %>" class="startup-link" title="attachment.title">
-                                                                        <img ng-show="account.logo_img_id" alt="account.name" class="google-drive-icon img-responsive img-thumbnail" ng-src="/static/img/google_drive/<%=attachment.mimeType%>.png" >
-                                                                    </a>
-                                                                </div>
-                                                                <div class="text">
-                                                                    <div class="name"><a href="/#/documents/show/<%= attachment.id %>"title="<%=attachment.title%>" class="profile-link" ><span><%=attachment.title%></span></a></div>
-                                                                    <div class="pitch">
-                                                                        <span  ng-show="contact.account_type">
-                                                                            <a href="/#/search/type:contact <%=contact.title%>"> #<%= contact.title %></a>
-                                                                        </span>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="clearfix"></div>
-                                                            </div>
-                                                        </div>
+                                    <div ng-repeat="attachment in documents" class="cardElement cusCardElement" style="min-height: 76px;">
+                                      <div class="customCheckbox cusCheckOnCard checkboxOnSmallScreen ">  
+                                            <input  title="Select document" type="checkbox" ng-checked="isSelectedDoc(attachment)" ng-click="selectDocWithCheck($event,$index,attachment)" id="docCard_<%= $index %>">
+                                            <label for="docCard_<%= $index %>" class="labelElement">
+                                              <span class="check"></span>
+                                              <span class="box"></span>
+                                            </label>  
+                                        </div>
+                                        <div class="detailsSection">
+                                            <div class="head">
+                                                <div class="pic">
+                                                    <a href="<%= attachment.embedLink %>"
+                                                       class="startup-link" title="attachment.title">
+                                                        <img alt="attachment.title"
+                                                             class="google-drive-icon img-responsive img-thumbnail"
+                                                             ng-src="/static/img/google_drive/<%=attachment.mimeType%>.png" ng-class="{ 'documentimgsize': attachment.mimeType=='image/jpeg'||attachment.mimeType=='image/png'||attachment.mimeType=='image/x-icon'}">
+                                                    </a>
+                                                </div>
+                                                <div class="text">
+                                                    <div class="name"><a href="<%= prepareEmbedLink(attachment.embedLink)%>" target="_blank" title="<%=attachment.title%>" class="profile-link"><span><%=attachment.title%></span></a>
                                                     </div>
+                                                    <div class="pitch">
+                                                        <span style="font-size: 11px;color: gray;">
+                                                            <%=attachment.created_at| date:'dd MMMM yyyy'%>
+                                                        </span>
+                                                    </div>                                        
+                                                </div>
+                                                <div class="clearfix"></div>
+                                            </div>
+                                        </div>
+                                    </div>
                                                     <!--blank stat-->
                                                     <div class="clearfix"></div>
                                                 </div><!--/inner-cards-container-->
@@ -3806,7 +3783,36 @@
         </div>
     </div>
 </div>
+  <div id="beforedeleteDoc" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title"><i class="fa fa-trash-o" style="font-size: 25px;"></i>  Delete Documents</h3>
+            </div>
+            <div class="modal-body">
+                <form id="seletesho" name="deletesho" class="form-horizontal">
+                    <fieldset>
 
+                        <p style="font-size: 16px;text-align: center;" ng-show="selectedDocs.length > 1">{{ _("Are you sure you want to delete") }} : <span style="color:blue"> <%=selectedDocs.length %> </span>  {{ _("documents") }} ?</p>
+                        <p style="font-size: 16px;text-align: center;" ng-show="selectedDocs.length == 1">{{ _("Are you sure you want to delete") }} : <span style="color:blue"> <%=selectedDocs[0].title %> </span> ?</p>
+
+
+                    </fieldset>
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _("Cancel") }}</button>
+
+                <input ng-click="deleteDocs()" type="submit" class="btn red" value="Delete">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
+            </div>
+
+        </div>
+    </div>
+</div>
 
 <div id="sharingSettingsModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -4056,27 +4062,32 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">{{_("Create a new")}} <%=mimeType%></h3>
+                <h3 id="myModalLabel" class="modal-title">
+                  <img ng-src="/static/img/google_drive/<%=mimeType%>.png" class="" style="width: 27px;margin-top: -10px;">
+                  {{ _("Create a new") }} <%=mimeType%>
+                </h3>
             </div>
             <div class="modal-body">
                 <div class="controls controls-row">
-                    <form id="addTask"  class="ng-pristine ng-valid">
-                        <input class="form-control" autofocus type="text" placeholder="{{_('Enter a new')}} <%=mimeType%> {{_('name')}}" id="taskTitle" ng-model="newdocument.title" required>
+                    <form id="addTask" class="ng-pristine ng-valid">
+                        <input class="form-control" autofocus type="text" placeholder="<%=mimeType | capitalizeFirst %> name ..."
+                               id="taskTitle" ng-model="newdocument.title" required>
 
 
-                        </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn" data-dismiss="modal" aria-hidden="true">{{_('Cancel')}}</button>
-
-                            <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document" ng-click="createDocument(newdocument)" ng-disabled="isLoading || !newdocument.title">
-                            <input ng-show="isLoading " type="submit" class="btn green" value="Loading..." disabled>
-
-                            </form>
-                        </div>
                 </div>
             </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Cancel') }}</button>
+
+                <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document"
+                       ng-click="createDocument(newdocument)">
+                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+
+                </form>
+            </div>
         </div>
+    </div>
+</div>
         <!--End Contact Modal -->
 
         <!--HKA 19.11.2013 Opportunity Modal -->
@@ -4304,33 +4315,7 @@
                     </div>
                 </div>
             </div>
-            <div id="newDocument" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                            <h3 id="myModalLabel" class="modal-title">{{_("Create a new")}} <%=mimeType%></h3>
-                        </div>
-                        <div class="modal-body">
-                            <div class="controls controls-row">
-                                <form id="addTask"  class="ng-pristine ng-valid">
-                                    <input class="form-control" autofocus type="text" placeholder="{{_('Enter a new')}} <%=mimeType%> {{_('name')}}" id="taskTitle" ng-model="newdocument.title" required>
-
-
-                                    </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button class="btn" data-dismiss="modal" aria-hidden="true">{{_('Cancel')}}</button>
-
-                                        <input ng-hide="isLoading" ng-click="createDocument(newdocument)" type="submit" class="btn green" value="Create this document">
-                                        <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
-
-                                        </form>
-                                    </div>
-                            </div>
-                        </div>
-                    </div>
-                   <div id="BeforedeleteOpportunity" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div id="BeforedeleteOpportunity" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
